Use Java 17 language features
Formatted strings